--- a/frontend/src/app/modulos/usuario/components/listagem/listagem.component.html
+++ b/frontend/src/app/modulos/usuario/components/listagem/listagem.component.html
@@ -9,12 +9,17 @@
           <tr>
               <th>Nome</th>
               <th>Data de Nascimento</th>
+              <th style="width: 80px;">Ações</th>
           </tr>
       </ng-template>
       <ng-template pTemplate="body" let-usuario>
           <tr>
               <td>{{usuario.nome}}</td>
               <td>{{usuario.dataNascimento | date: 'dd/MM/yyyy'}}</td>
+              <td class="p-d-flex p-jc-center">
+                <button [routerLink]="['formulario', usuario.id]" pButton type="button" icon="pi pi-pencil"></button>
+                <button (click)="deletarUsuario(usuario.id)" class="p-ml-2" pButton type="button" icon="pi pi-trash"></button>
+              </td>
           </tr>
       </ng-template>
     </p-table>
